@@ -1,5 +1,7 @@
 4/11/14 started 7.42.0
 - better default resolution for png load
+- better pbm (one bit) load, better pfm (float) load/save
+- added pbm (one bit) save
 
 25/7/14 started 7.41.0
 - start working on --disable-deprecated
